--- a/application/package.json
+++ b/application/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.2.1",
-    "apollo-server-express": "^3.11.1",
+    "@apollo/server": "^4.3.1",
     "body-parser": "^1.20.1",
     "convict": "^6.2.3",
     "convict-format-with-validator": "^6.2.0",
